errlog
g++ -g -std=c++17 -c ./src/*.cpp
In file included from ./src/main.cpp:1:
./src/../include/render.h:16:18: error: ‘sf::Rectangle’ has not been declared
   16 |   void createCab(sf::Rectangle& cab);
      |                  ^~
./src/../include/render.h:18:58: error: ‘sf::Rectangle’ has not been declared
   18 |   void drawNDisplay(std::vector<sf::RectangleShape>& pl, sf::Rectangle& cab);
      |                                                          ^~
In file included from ./src/render.cpp:1:
./src/../include/render.h:16:18: error: ‘sf::Rectangle’ has not been declared
   16 |   void createCab(sf::Rectangle& cab);
      |                  ^~
./src/../include/render.h:18:58: error: ‘sf::Rectangle’ has not been declared
   18 |   void drawNDisplay(std::vector<sf::RectangleShape>& pl, sf::Rectangle& cab);
      |                                                          ^~
./src/render.cpp: In member function ‘void Render::runSimulation()’:
./src/render.cpp:13:6: error: ‘Rectangle’ is not a member of ‘sf’; did you mean ‘RectangleShape’?
   13 |  sf::Rectangle cab;
      |      ^~~~~~~~~
      |      RectangleShape
./src/render.cpp:16:12: error: ‘cab’ was not declared in this scope; did you mean ‘Cab’?
   16 |  createCab(cab);
      |            ^~~
      |            Cab
./src/render.cpp: At global scope:
./src/render.cpp:50:6: error: variable or field ‘createCab’ declared void
   50 | void createCab(sf::Rectangle& cab){
      |      ^~~~~~~~~
./src/render.cpp:50:20: error: ‘Rectangle’ is not a member of ‘sf’; did you mean ‘RectangleShape’?
   50 | void createCab(sf::Rectangle& cab){
      |                    ^~~~~~~~~
      |                    RectangleShape
./src/render.cpp:50:31: error: ‘cab’ was not declared in this scope; did you mean ‘Cab’?
   50 | void createCab(sf::Rectangle& cab){
      |                               ^~~
      |                               Cab
./src/render.cpp:61:64: error: ‘sf::Rectangle’ has not been declared
   61 | void Render::drawNDisplay(std::vector<sf::RectangleShape>& pl, sf::Rectangle& cab){
      |                                                                ^~
./src/render.cpp: In member function ‘void Render::drawNDisplay(std::vector<sf::RectangleShape>&, int&)’:
./src/render.cpp:68:23: error: no matching function for call to ‘sf::RenderWindow::draw(int&)’
   68 |  this->window.draw(cab);
      |                       ^
In file included from /usr/include/SFML/Graphics.hpp:45,
                 from ./src/../include/render.h:1,
                 from ./src/render.cpp:1:
/usr/include/SFML/Graphics/RenderTarget.hpp:237:10: note: candidate: ‘void sf::RenderTarget::draw(const sf::Drawable&, const sf::RenderStates&)’
  237 |     void draw(const Drawable& drawable, const RenderStates& states = RenderStates::Default);
      |          ^~~~
/usr/include/SFML/Graphics/RenderTarget.hpp:237:31: note:   no known conversion for argument 1 from ‘int’ to ‘const sf::Drawable&’
  237 |     void draw(const Drawable& drawable, const RenderStates& states = RenderStates::Default);
      |               ~~~~~~~~~~~~~~~~^~~~~~~~
/usr/include/SFML/Graphics/RenderTarget.hpp:248:10: note: candidate: ‘void sf::RenderTarget::draw(const sf::Vertex*, std::size_t, sf::PrimitiveType, const sf::RenderStates&)’
  248 |     void draw(const Vertex* vertices, std::size_t vertexCount,
      |          ^~~~
/usr/include/SFML/Graphics/RenderTarget.hpp:248:10: note:   candidate expects 4 arguments, 1 provided
/usr/include/SFML/Graphics/RenderTarget.hpp:258:10: note: candidate: ‘void sf::RenderTarget::draw(const sf::VertexBuffer&, const sf::RenderStates&)’
  258 |     void draw(const VertexBuffer& vertexBuffer, const RenderStates& states = RenderStates::Default);
      |          ^~~~
/usr/include/SFML/Graphics/RenderTarget.hpp:258:35: note:   no known conversion for argument 1 from ‘int’ to ‘const sf::VertexBuffer&’
  258 |     void draw(const VertexBuffer& vertexBuffer, const RenderStates& states = RenderStates::Default);
      |               ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~
/usr/include/SFML/Graphics/RenderTarget.hpp:269:10: note: candidate: ‘void sf::RenderTarget::draw(const sf::VertexBuffer&, std::size_t, std::size_t, const sf::RenderStates&)’
  269 |     void draw(const VertexBuffer& vertexBuffer, std::size_t firstVertex, std::size_t vertexCount, const RenderStates& states = RenderStates::Default);
      |          ^~~~
/usr/include/SFML/Graphics/RenderTarget.hpp:269:10: note:   candidate expects 4 arguments, 1 provided
make: *** [Makefile:2: build] Error 1
